--- a/app/src/main/res/layout/register_activity.xml
+++ b/app/src/main/res/layout/register_activity.xml
@@ -100,7 +100,7 @@
             android:layout_centerInParent="true"
             android:textColor="@android:color/white"
             android:text="@string/register"
-            android:onClick="createAccount" />
+            android:onClick="onClick"/>
 
         <ImageView
             android:layout_width="30dp"
