--- a/app/src/main/res/layout/headerfile.xml
+++ b/app/src/main/res/layout/headerfile.xml
@@ -15,7 +15,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Book Exchange"
+        android:text="Exchange Library"
         android:textColor="#ffffff"
         android:textSize="20sp"
         android:textStyle="bold"
