--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -21,7 +21,7 @@
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent">
-            <androidx.constraintlayout.widget.ConstraintLayout
+            <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
                 <androidx.appcompat.widget.Toolbar
@@ -34,7 +34,155 @@
                     app:titleMarginStart="10dp"
                     android:layout_marginBottom="5dp"
                     tools:ignore="MissingConstraints"/>
-            </androidx.constraintlayout.widget.ConstraintLayout>
+                <RelativeLayout
+                    android:id="@+id/profile_container"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="60dp">
+
+                    <ImageView
+                        android:id="@+id/profilePic"
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"
+                        android:adjustViewBounds="true"
+                        android:layout_marginTop="2dp"
+                        android:layout_marginLeft="1dp"
+                        android:src="@drawable/profile_img">
+                    </ImageView>
+
+                    <LinearLayout
+                        android:orientation="vertical"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="10dp"
+                        android:layout_toRightOf="@id/profilePic">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:text="Test User"
+                            android:textColor="@color/black"
+                            android:fontFamily="sans-serif-medium"
+                            android:textSize="17sp"
+                            android:layout_marginTop="10dp"
+                            android:layout_height="wrap_content">
+
+                        </TextView>
+
+
+
+                    </LinearLayout>
+
+
+                </RelativeLayout>
+                <TextView
+                    android:id="@id/title"
+                    android:layout_below="@+id/profile_container"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="15dp"
+                    android:text="Title: Letting Go"
+                    android:textSize="16sp"
+                    android:textColor="@color/black"
+                    ></TextView>
+                <TextView
+                    android:id="@+id/author"
+                    android:layout_below="@+id/title"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="15dp"
+                    android:text="Author: Philip Roth"
+                    android:textSize="16sp"
+                    android:textColor="@color/black"
+                    ></TextView>
+                <TextView
+                    android:id="@+id/summary"
+                    android:layout_below="@+id/author"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="15dp"
+                    android:text="Summary: Letting Go by Philip Roth is a book my father handed me. Only one novel a year, on average, was read by Dad. He read hundreds of scholarly non-fiction books each year because he studied politics."
+                    android:textSize="16sp"
+                    android:textColor="@color/black"
+                    ></TextView>
+                <TextView
+                    android:id="@+id/genre"
+                    android:layout_below="@+id/summary"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="15dp"
+                    android:text="Genre: Fictional"
+                    android:textSize="16sp"
+                    android:textColor="@color/black"
+                    ></TextView>
+
+                <TextView
+                    android:id="@+id/review"
+                    android:layout_below="@+id/genre"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="15dp"
+                    android:text="Review: Good"
+                    android:textSize="16sp"
+                    android:textColor="@color/black"
+                    ></TextView>
+                <TextView
+                    android:id="@+id/rating"
+                    android:layout_below="@+id/review"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="15dp"
+                    android:text="Rating: 4/5"
+                    android:textSize="16sp"
+                    android:textColor="@color/black"
+                    ></TextView>
+
+                <TextView
+                    android:id="@+id/location"
+                    android:layout_below="@+id/rating"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="15dp"
+                    android:text="Location: Texas"
+                    android:textSize="16sp"
+                    android:textColor="@color/black"
+                    ></TextView>
+
+                <ImageView
+                    android:id="@+id/book_img"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/location"
+                    android:adjustViewBounds="true"
+                    android:scaleType="fitCenter"
+                    android:src="@drawable/book"
+                    android:layout_marginTop="5dp">
+                </ImageView>
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/book_img">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_centerInParent="true"
+                        android:layout_marginTop="10dp">
+
+                        <Button
+                            android:id="@+id/btn_chat"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:background="@drawable/layout_btn"
+                            android:fontFamily="sans-serif-medium"
+                            android:textColor="@android:color/white"
+                            android:text="Chat"/>
+
+
+                    </LinearLayout>
+                </RelativeLayout>
+
+            </RelativeLayout>
 
 
         </ScrollView>
