--- a/app/src/main/res/layout/post_feed.xml
+++ b/app/src/main/res/layout/post_feed.xml
@@ -46,6 +46,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="5dp">
             </TextView>
+
         </LinearLayout>
         <TextView
             android:id="@id/title"
@@ -69,9 +70,20 @@
             android:textColor="@color/black"
             ></TextView>
 
+        <ImageView
+            android:id="@+id/book_img"
+            android:layout_below="@+id/author"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:adjustViewBounds="true"
+            android:scaleType="fitCenter"
+            android:src="@drawable/book"
+            android:layout_marginTop="5dp">
+        </ImageView>
+
         <TextView
             android:id="@+id/summary"
-            android:layout_below="@+id/author"
+            android:layout_below="@+id/book_img"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
@@ -80,80 +92,69 @@
             android:textColor="@color/black"
             ></TextView>
 
-            <TextView
-                android:id="@+id/genre"
-                android:layout_below="@+id/summary"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:text="Genre: Fictional"
-                android:textSize="16sp"
-                android:textColor="@color/black"
-                ></TextView>
-            <TextView
-                android:id="@+id/review"
-                android:layout_below="@+id/genre"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:text="Review: Good"
-                android:textSize="16sp"
-                android:textColor="@color/black"
-                ></TextView>
-            <TextView
-                android:id="@+id/rating"
-                android:layout_below="@+id/review"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:text="Rating: 4/5"
-                android:textSize="16sp"
-                android:textColor="@color/black"
-                ></TextView>
+        <TextView
+            android:id="@+id/genre"
+            android:layout_below="@+id/summary"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:text="Genre: Fictional"
+            android:textSize="16sp"
+            android:textColor="@color/black"
+            ></TextView>
 
-            <TextView
-                android:id="@+id/location"
-                android:layout_below="@+id/rating"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:text="Location: Texas"
-                android:textSize="16sp"
-                android:textColor="@color/black"
-                ></TextView>
+        <TextView
+            android:id="@+id/review"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/genre"
+            android:layout_marginTop="10dp"
+            android:text="Review: Good"
+            android:textColor="@color/black"
+            android:textSize="16sp"></TextView>
 
-            <ImageView
-                android:id="@+id/book_img"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/location"
-                android:adjustViewBounds="true"
-                android:scaleType="fitCenter"
-                android:src="@drawable/book"
-                android:layout_marginTop="5dp">
-            </ImageView>
-<!--        <RelativeLayout-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_below="@id/book_img">-->
+        <TextView
+            android:id="@+id/rating"
+            android:layout_below="@+id/review"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:text="Rating: 4/5"
+            android:textSize="16sp"
+            android:textColor="@color/black"
+            ></TextView>
 
-<!--            <LinearLayout-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:layout_centerInParent="true"-->
-<!--                android:layout_marginTop="10dp">-->
+        <TextView
+            android:id="@+id/location"
+            android:layout_below="@+id/rating"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:text="Location: Texas"
+            android:textSize="16sp"
+            android:textColor="@color/black"
+            ></TextView>
 
-<!--                <Button-->
-<!--                    android:id="@+id/btn_chat"-->
-<!--                    android:layout_width="match_parent"-->
-<!--                    android:layout_height="match_parent"-->
-<!--                    android:background="@drawable/layout_btn"-->
-<!--                    android:fontFamily="sans-serif-medium"-->
-<!--                    android:textColor="@android:color/white"-->
-<!--                    android:text="Chat"/>-->
+        <RatingBar
+            android:id="@+id/ratingBar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/location"
+            android:numStars="5"
+            android:rating="3.5"
+            android:theme="@style/RatingBar"/>
 
-
-<!--            </LinearLayout>-->
-<!--        </RelativeLayout>-->
+        <Button
+            android:id="@+id/btnGet"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/ratingBar"
+            android:layout_alignLeft="@+id/ratingBar"
+            android:layout_marginLeft="250dp"
+            android:layout_marginTop="-54dp"
+            android:text="Rate"
+            android:textColor="@color/white"
+            android:backgroundTint="@color/colorPrimaryDark" />
     </RelativeLayout>
+
 </androidx.cardview.widget.CardView>
