--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="colorPrimary">#FF7518</color>
     <color name="colorPrimaryDark">#FF7518</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="lightgray">#D3D3D3</color>
 </resources>
